@@ -8,6 +8,7 @@ Version 1.06.0
 - Linux console Inkey() now recognizes F11 and F12
 - 2D render through OpenGL on Windows and Linux via screencontrol (angros47)
 - Windows API binding updated to additionally support _WIN32_WINNT &h0501, &h0600, &h0601
+- Under X11, ScreenControl GET_WINDOW_HANDLE places the Display ptr in param2
 
 [fixed]
 - win/d3dx9.bi no longer has a hard-coded #inclib "d3dx9d". d3dx9d.dll is apparently not a generally valid choice. In practice programs have to be linked against d3dx9_33.dll or d3dx9_39.dll, etc.
